@@ -98,6 +98,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.forge/com.forge.ForgeApp</mainClass>
+                    <options>
+                        <option>--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
